Change settings and webpack config

--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,9 @@
     },
 
     "globals": {
-        "tars": true
+        "tars": true,
+        "PIXI": true,
+        "TweenMax": true
     },
 
     "extends": "eslint:recommended",
