--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "main": "gulpfile.js",
   "directories": {},
   "dependencies": {
-    "babel-preset-es2015": "^6.22.0"
+    "babel-preset-es2015": "^6.22.0",
+    "pixi.js": "^4.3.5"
   },
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "brfs": "^1.4.1",
+    "json-loader": "^0.5.4",
+    "transform-loader": "^0.2.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
