--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "directories": {},
   "dependencies": {
     "babel-preset-es2015": "^6.22.0",
+    "gsap": "^1.19.1",
     "pixi.js": "^4.3.5"
   },
   "devDependencies": {
