--- a/.eslintrc
+++ b/.eslintrc
@@ -90,7 +90,7 @@
         "no-undef": 2,
         "no-undef-init": 2,
         "no-undefined": 2,
-        "no-unused-expressions": 2,
+        "no-unused-expressions": "off",
         "no-unused-vars": [1, {"vars": "all", "args": "after-used"}],
         "no-use-before-define": 2,
         "no-with": 2,
